update-manager (1:0.132.1) UNRELEASED; urgency=low

  * rename update-manager-support-status to ubuntu-support-status
  * check-new-release-gtk:
    - add gtk tool for release notification that is designed to be
      run from update-notifier (desktop-lucid-update-upgrade-requirements)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 11 Feb 2010 15:40:00 +0100

update-manager (1:0.132) lucid; urgency=low

  [ Michael Vogt ]
  * UpdateManager/Core/MetaRelease.py:
    - add timeout to meta-release download
  * UpdateManager/MetaReleaseGObject.py:
    - make sure threading is enabled
  * DistUpgrade/DistUpgrade.cfg:
    - add kubuntu-netbook to known metapackages
    - remove usplash artwork from KeyDependencies
  * DistUpgrade/DistUpgradeController.py:
    - test for server mode again after the sources.list rewrite,
      to capture the case when the initial sources.list is empty
  * DistUpgrade/DistUpgradeCache.py:
    - when showing the demoted packages, skip packages that
      are automatic installed
    - improve performance on the removal checks by making use of
      the auto removable information more agressively
    - increase space required by the kernel (it grew)
  * DistUpgrade/DistUpgradeView.py, DistUpgrade/DistUpgradeView{Gtk,KDE}.py:
    - show only non auto-installed removals bold
  * update-manager-support-status:
    - add --show-supported, --show-unsupported and --show-all for summary
    - add --list option for full details

  [ Colin Watson ]
  * update-manager-support-status:
    - fix typo in get_maintenance_status (LP: #513303)
    - add support statistics to the output

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 11 Feb 2010 10:31:37 +0100

update-manager (1:0.131.4) lucid; urgency=low

  * update-manager-support-status:
    - text mode tool that gives a overview on the support
      status of the packages
  * DistUpgrade/DistUpgrade.ui, DistUpgrade/window_main.ui:
    - fix version number (thanks to davmor2)