@@ -4,6 +4,8 @@ update-manager (1:0.132.1) UNRELEASED; urgency=low
   * check-new-release-gtk:
     - add gtk tool for release notification that is designed to be
       run from update-notifier (desktop-lucid-update-upgrade-requirements)
+  * DistUpgrade/DistUpgradeCache.py:
+    - fix crash in cleanup code
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 11 Feb 2010 15:40:00 +0100
 
